@@ -4,30 +4,31 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonTypeName;
 import jakarta.validation.Valid;
+import java.util.Collections;
 import java.util.Map;
 import lombok.*;
 
 @Getter
 @ToString(callSuper = true)
 @Valid
-@JsonTypeName("logs-analysis-job")
+@JsonTypeName("spark-example")
 // Should be Immutable
-public class LogsAnalysisJobSubmitRequest extends JobSubmitRequest {
+public class SparkExampleJobLaunchRequest extends JobLaunchRequest {
 
-  private LogsAnalysisJobSubmitRequest(
+  private SparkExampleJobLaunchRequest(
       final String jobName, final Map<String, Object> sparkConfigs) {
     super(jobName, sparkConfigs);
   }
 
   @JsonCreator
-  public static LogsAnalysisJobSubmitRequest of(
+  public static SparkExampleJobLaunchRequest of(
       @JsonProperty("jobName") final String jobName,
       @JsonProperty("sparkConfigs") final Map<String, Object> sparkConfigs) {
-    return new LogsAnalysisJobSubmitRequest(jobName, sparkConfigs);
+    return new SparkExampleJobLaunchRequest(jobName, sparkConfigs);
   }
 
   @Override
-  public Map<String, String> jobVMOptions() {
-    return Map.of();
+  public Map<String, String> jobArgs() {
+    return Collections.emptyMap();
   }
 }
